[package]
name = "activity-tracker-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
redis = "*"

[dependencies.amiquip]
version = "0.4" 
default-features = false

[dependencies.chrono]
version = "0.4"
features = [
    "serde"
]

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.postgres]
postgres = "*"
features = [
    "with-chrono-0_4",
    "with-time-0_3"
]